# Ufabc-Chatbot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  skills.md
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/seaweed/: s3-config.json
docs/: chunk.md  ingestion-prompt-template.md  rag-file-preparation.md
frontend/: analytics.css  analytics.html  analytics.js  app.js  approval.css  approval.html  approval.js  design-tokens.css  index.html  ingestion.css  ingestion.html  ingestion.js  package-lock.json  package.json  styles.css
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useResize.ts  useTheme.ts
frontend/src/lib/: api.ts  sessionState.ts
frontend/src/pages/: AnalyticsPage.tsx  ApprovalPage.tsx  FilesPage.tsx  IngestionPage.tsx  LoginPage.tsx
frontend/src/styles/: app.css
src/ufabc_chatbot/: __init__.py  main.py
src/ufabc_chatbot/application/: __init__.py  auth_service.py  contracts.py  file_feed_service.py  services.py
src/ufabc_chatbot/core/: __init__.py  auth_dependencies.py  config.py  dependencies.py
src/ufabc_chatbot/domain/: __init__.py  auth.py  file_feed.py  models.py
src/ufabc_chatbot/infrastructure/: __init__.py
src/ufabc_chatbot/infrastructure/db/: __init__.py  auth_models.py  auth_repository.py  (+3 more)
src/ufabc_chatbot/presentation/: __init__.py
tests/: conftest.py  test_auth.py  test_file_feed.py  test_health.py  test_ingestion.py  test_seaweed_metadata.py
(+12 files in other folders)
